# parelthon

./: .gitignore  Cargo.toml  Dockerfile  cargo.toml  docker-compose.yml  package-lock.json  todo.md
.github/workflows/: prod.yml
backend/: Cargo.toml  README.md
backend/migrations/: 20230916023941_create_basic_models.sql
backend/src/: authentication.rs  lib.rs  main.rs
backend/src/errors/: mod.rs
backend/src/services/: mod.rs
backend/src/services/comment/: get.rs  post.rs
backend/src/services/s3/: mod.rs
backend/src/services/user/: get.rs  post.rs
backend/src/services/video/: get.rs  post.rs
clients/desktop/: Cargo.toml
clients/desktop/src/: errors.rs  lib.rs  main.rs
clients/react-app/: package-lock.json  package.json  vite.config.ts
clients/react-app/src/: App.css  App.tsx  main.tsx  routes.ts  styles.css
clients/react-app/src-tauri/: Cargo.toml  tauri.conf.json
clients/react-app/src/api/: comments.ts  index.ts  videos.ts
clients/react-app/src/component/: AddVideoCard.module.css  AddVideoCard.tsx  Audio.tsx  (+46 more)
crates/parelthon_models/: Cargo.toml
crates/parelthon_models/src/: comment.rs  point2d.rs  user.rs  video.rs
crates/transcripter/: Cargo.toml
crates/transcripter/assets/: transcript-1.txt
crates/transcripter/src/: lib.rs  main.rs
crates/visage_models/: Cargo.toml
crates/visage_models/src/: lib.rs  point2d.rs  session.rs  video.rs  video_label.rs
parelthon_server/: Cargo.toml
parelthon_server/.sqlx/: query-09ed25f638aefe282bef4e4c63b7940b91f9e6cfd79ecf820c800624181ad7be.json  query-285e6ac0969a13b29fda8506351b0bfcf7a1fcc85f94c96d2ff153ee0c59029e.json  query-575ee017fc7db82be5d1b97e182bedd95b3b646839cb2ed59be2f7e82c193c0e.json
parelthon_server/migrations/: 20230916023941_create_basic_models.sql
parelthon_server/src/: authentication.rs  lib.rs  main.rs
parelthon_server/src/errors/: mod.rs
parelthon_server/src/services/: mod.rs
(+90 files in other folders)
