[package]
name = "parelthon_desktop_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
parelthon_models = { path = "../../crates/parelthon_models"}
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde"] }
geo = { version = "0.26.0", features = ["serde"] }
thiserror = "1.0.38"
color-eyre = "0.6.2"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
geo-types = {version="0.7", features=["serde"]}
reqwest = { version = "0.11.18", features = ['json'] }

rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"