[package]
name = "parelthon_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "uuid",
    "time",
    "chrono",
    "postgres",
    "macros",

] }
uuid = { version = "1.1.2", features = ["serde"] }
geo = { version = "0.26.0", features = ["serde"] }
thiserror = "1.0.38"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
geo-types = { version = "0.7", features = ["serde"] }

rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
tempfile = "3"
axum_typed_multipart = "0.10.1"
